[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/material_ui/white_48dp/folder_open_white_48dp.svg" type="Texture" id=1]
[ext_resource path="res://scenes/settings/dir_line_edit.gd" type="Script" id=2]
[ext_resource path="res://scripts/tweaks/texture_button_modulate_switch.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/material_ui/white_48dp/folder_white_filled_48dp.svg" type="Texture" id=4]
[ext_resource path="res://addons/native_dialogs/bin/native_dialog_select_folder.gdns" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.654902 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_right = 40.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 12.0
bg_color = Color( 0, 0, 0, 0.654902 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_right = 40.0

[node name="DirLineEdit" type="PanelContainer"]
margin_top = 84.0
margin_right = 403.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 403.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="HBox"]
margin_top = 15.0
margin_right = 100.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
text = "Label"

[node name="LineEdit" type="LineEdit" parent="HBox"]
margin_left = 104.0
margin_right = 369.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="FileButton" type="TextureButton" parent="HBox"]
margin_left = 373.0
margin_right = 403.0
margin_bottom = 44.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )
secondary_color = Color( 0.513726, 0.47451, 1, 1 )
on_hover = true
on_focus = true

[node name="DialogSelectFolder" type="Node" parent="."]
script = ExtResource( 5 )
title = "Select folder"

[connection signal="text_changed" from="HBox/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="HBox/FileButton" to="." method="_on_FileButton_pressed"]
[connection signal="folder_selected" from="DialogSelectFolder" to="." method="_on_DialogSelectFolder_folder_selected"]
